# AdventOfCode

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
AdventOfCode/: CMakeLists.txt
AdventOfCode/inc/: BoilerPlate.h  Common.h  Facing.h  pch.h
AdventOfCode/inc/Logging/: AocLogs.h  LogStream.h
AdventOfCode/inc/Runner/: BenchmarkRunner.h  Solution.h  SolutionRunner.h
AdventOfCode/inc/Utils/: InputUtils.h
AdventOfCode/inputs/2023/: d1.txt
AdventOfCode/src/: main.cpp
AdventOfCode/src/2015/: d10_SeeAndSay.cpp  d11_NextPass.cpp  d12_JsAbacus.cpp  d13_KnightsOfDinner.cpp  d14_ReindeerRaces.cpp  d15_PerfectCookie.cpp  d16_AuntSue.cpp  d17_EggnogStorage.cpp  d18_LightWar2.cpp  d19_RudolfReactor.cpp  d1_SantaElevator.cpp  d20_ElfDelivery.cpp  d21_BossBattle.cpp  d22_BossBattle2.cpp  d23_TuringLock.cpp  d24_SledBalance.cpp  d25_SecretCode.cpp  d2_ElfWrappingPaper.cpp  d3_AtLeastOnePresent.cpp  d4_AdventCoins.cpp  d5_NiceString.cpp  d6_LightWar.cpp  d7_Circuit.cpp  d8_EscapedStrings.cpp  d9_SingleNight.cpp
AdventOfCode/src/2016/: d10_BalanceBots.cpp  d11_Generators.cpp  d12_Assembunny.cpp  d13_CubeFarm.cpp  d14_OneTimePad.cpp  d15_WinCapsule.cpp  d16_DragonChecksum.cpp  d17_Vault.cpp  d18_Traps.cpp  d19_WhiteElephant.cpp  d1_GridSearch.cpp  d20_Firewall.cpp  d21_Scrambler.cpp  d22_GridComputing.cpp  d23_SafeCrack.cpp  d24_AirDucts.cpp  d25_ClockSignal.cpp  d2_BathroomSecurity.cpp  d3_TriangleSquare.cpp  d4_DecoyRoom.cpp  d5_DoorPass.cpp  d6_RepeatSignal.cpp  d7_IpV7.cpp  d8_TFA.cpp  d9_Decompress.cpp
AdventOfCode/src/2017/: KnotHash.cpp  d10_KnotHash.cpp  d11_HexGrid.cpp  d12_PipeMessage.cpp  d13_Firewall.cpp  d14_Defrag.cpp  d15_Generators.cpp  d16_Dance.cpp  d17_SpinLock.cpp  d18_Duet.cpp  d19_Routing.cpp  d1_Captcha.cpp  d20_ParticleSwarm.cpp  d21_FractalArt.cpp  d22_Infecting.cpp  d23_Coprocessor.cpp  d24_Bridge.cpp  d25_TuringMachine.cpp  d2_Checksum.cpp  d3_SpiralMemory.cpp  d4_Passphrase.cpp  d5_Trampoline.cpp  d6_Realloc.cpp  d7_Circus.cpp  d8_Registers.cpp  d9_Streams.cpp
AdventOfCode/src/2018/: d10_StarMessage.cpp  d11_PowerCell.cpp  d12_Plants.cpp  d13_MineCart.cpp  d14_HotChocolate.cpp  d15_ElfCombat.cpp  d16_Chronal.cpp  d17_Waterfall.cpp  d18_Lumber.cpp  d19_Comp2.cpp  d1_Calibrate.cpp  d20_Pathing.cpp  d21_Comp3.cpp  d22_Cave.cpp  d23_Teleport.cpp  d24_Armies.cpp  d25_TimePortal.cpp  d2_BoxId.cpp  d3_Fabric.cpp  d4_Record.cpp  d5_Reduction.cpp  d6_Coordinates.cpp  d7_Sleigh.cpp  d8_MemoryTree.cpp  d9_Marbles.cpp
AdventOfCode/src/2019/: Comp.h  d10_Asteroid.cpp  d11_Comp5.cpp  d12_Moons.cpp  d13_Comp6.cpp  d14_Fuel.cpp  d15_Comp7.cpp  d16_Fft.cpp  d17_Ascii.cpp  d18_CaveDoors.cpp  d19_Comp8.cpp  d1_Fuel.cpp  d20_PlutoMaze.cpp  d21_Comp9.cpp  d22_SpaceCards.cpp  d23_Comp10.cpp  d24_Bugs.cpp  d25_Comp11.cpp  d2_Comp1.cpp  d3_Wires.cpp  d4_VenusPass.cpp  d5_Comp2.cpp  d6_Orbits.cpp  d7_Comp3.cpp  d8_ImageFormat.cpp  d9_Comp4.cpp
AdventOfCode/src/2020/: d10_Jolts.cpp  d11_WaitingSeats.cpp  d12_RainRisk.cpp  d13_BusStop.cpp  d14_Docking.cpp  d15_NumberGame.cpp  d16_Tickets.cpp  d17_Reactor.cpp  d18_NewMath.cpp  d19_SeaMonster.cpp  d1_Expense.cpp  d20_TileMap.cpp  d21_Allergens.cpp  d22_CrabCombat.cpp  d23_CrabCups.cpp  d24_Lobby.cpp  d25_RoomCard.cpp  d2_PassCheck.cpp  d3_TreePath.cpp  d4_Passport.cpp  d5_Seat.cpp  d6_Customs.cpp  d7_Luggage.cpp  d8_Halting.cpp  d9_Xmas.cpp
AdventOfCode/src/2021/: d10_Syntax.cpp  d11_OctoFlash.cpp  d12_CavePath.cpp  d13_FoldingPaper.cpp  d14_Polymer.cpp  d15_Chiton.cpp  d16_Bits.cpp  d17_ProbeShot.cpp  d18_SnailMath.cpp  d19_Beacons.cpp  d1_Sonar.cpp  d20_Image.cpp  d21_Dice.cpp  d22_Reactor.cpp  d23_Hanoi.cpp  d24_Monad.cpp  d25_Landing.cpp  d2_Dive.cpp  d3_Binary.cpp  d4_Bingo.cpp  d5_Vents.cpp  d6_Fish.cpp  d7_Whales.cpp  d8_DigitDisplay.cpp  d9_LavaTube.cpp
AdventOfCode/src/2022/: d10_Crt.cpp  d11_MonkeyBusiness.cpp  d12_HillClimb.cpp  d13_DistressSignal.cpp  d14_FallingSand.cpp  d15_Beacon.cpp  d16_Pressure.cpp  d17_Tetris.cpp  d18_LavaBlock.cpp  d19_GatherOre.cpp  d1_ElfSnacks.cpp  d20_Mixing.cpp  d21_MonkeyMath.cpp  d22_MonkeyMap.cpp  d23_Planting.cpp  d24_Blizzard.cpp  d25_Snafu.cpp  d2_RPS.cpp  d3_Rucksack.cpp  d4_ElfCleaning.cpp  d5_SupplyStacks.cpp  d6_TuningTrouble.cpp  d7_Os.cpp  d8_TreeTop.cpp  d9_Rope.cpp
AdventOfCode/src/2023/: d10_PipeMaze.cpp  d11_CosmicExpansion.cpp  d12_HotSprings.cpp  d13_Mirrors.cpp  d14_Tilting.cpp  d15_HashLens.cpp  d16_LightPath.cpp  d17_LavaPath.cpp  d18_LavaLagoon.cpp  d19_GearSort.cpp  d1_Trebuchet.cpp  d20_PulseMachine.cpp  d21_GardenSteps.cpp  d22_FallingSand.cpp  d23_ScenicWalk.cpp  d24_Hail.cpp  d25_CutWires.cpp  d2_CubeGame.cpp  d3_Gears.cpp  d4_Scratch.cpp  d5_SeedMap.cpp  d6_BoatRace.cpp  d7_CamelCards.cpp  d8_Maps.cpp  d9_Oasis.cpp
AdventOfCode/src/2024/: d10.cpp  d10_HoofIt.cpp  d11.cpp  d11_PlutonianPebbles.cpp  d12.cpp  d12_GardenGroups.cpp  d13.cpp  d13_ClawContraption.cpp  d14.cpp  d14_RestroomRedoubt.cpp  d15.cpp  d15_WarehouseWoes.cpp  d16.cpp  d16_ReindeerMaze.cpp  d17.cpp  d17_ChronospatialComputer.cpp  d18.cpp  d18_RamRun.cpp  d19.cpp  d19_LinenLayout.cpp  d1_.cpp  d1_HistorianHisteria.cpp  d20.cpp  d20_RaceCondition.cpp  d21.cpp  d21_KeypadConundrum.cpp  d22.cpp  d22_MonkeyMarket.cpp  d23.cpp  d23_LanParty.cpp  d24.cpp  d24_CrossedWires.cpp  d25.cpp  d25_CodeChronicle.cpp  d2_RedNoseReports.cpp  d3_MullItOver.cpp  d4.cpp  d4_CeresSearch.cpp  d5.cpp  d5_PrintQueue.cpp  (+8 more)
AdventOfCode/src/2025/: d10_.cpp  d10_Factory.cpp  d11_.cpp  d11_Reactor.cpp  d12_.cpp  d12_TreeFarm.cpp  d1_SecretEntrance.cpp  d2_.cpp  d2_GiftShop.cpp  d3_.cpp  d3_Lobby.cpp  d4_.cpp  d4_PrintingDept.cpp  d5_.cpp  d5_Cafeteria.cpp  d6_.cpp  d6_TrashCompactor.cpp  d7_.cpp  d7_Laboratories.cpp  d8_.cpp  d8_Playground.cpp  d9_.cpp  d9_MovieTheater.cpp
AdventOfCode/src/Commands/: BenchmarkCommand.cpp  RunProblemCommand.cpp
AdventOfCode/src/Kattis/: 10People.cpp  2048.cpp  4Thought.cpp  Matryoshka.cpp
AdventOfCode/src/Logging/: LogStream.cpp
AdventOfCode/src/Runner/: BenchmarkRunner.cpp  Solution.cpp  SolutionRunner.cpp
