project(AdventOfCode LANGUAGES CXX)

add_executable (${PROJECT_NAME})

target_link_libraries(${PROJECT_NAME} Core)
target_link_libraries(${PROJECT_NAME} ctre)
target_link_libraries(${PROJECT_NAME} CliParser)

#set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/PROFILE")
target_include_directories(${PROJECT_NAME} PUBLIC inc)
target_precompile_headers(${PROJECT_NAME}
PRIVATE
	inc/pch.h
)


#target_compile_options(${PROJECT_NAME} PRIVATE "/constexpr:steps10000000")

## Making it so you can #include a raw string

#function(make_includable input_file output_file)
#	file(READ ${input_file} content)
#	set(delim "for_c++_include")
#	set(content "R\"${delim}(${content})${delim}\"")
#	file(WRITE ${output_file} "${content}")
#endfunction(make_includable)
#foreach(YEAR RANGE 2015 2023)
#	foreach(DAY RANGE 1 25)
#		make_includable(${CMAKE_CURRENT_SOURCE_DIR}/Inputs/${YEAR}/d${DAY}.txt inc/generated/${YEAR}_d${DAY}.txt)
#	endforeach()
#endforeach()

#Copying input files to output directory
add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/Inputs ${CMAKE_CURRENT_BINARY_DIR}/Inputs
)

target_sources(${PROJECT_NAME} 
	PRIVATE 
	src/main.cpp
	
	src/Commands/RunProblemCommand.cpp
	src/Commands/BenchmarkCommand.cpp
	src/Logging/LogStream.cpp
	src/Runner/BenchmarkRunner.cpp
	src/Runner/SolutionRunner.cpp
	src/Runner/ExeInputReader.cpp
	src/Runner/Solution.cpp
	
	"src/2015/d1_SantaElevator.cpp"
	"src/2015/d2_ElfWrappingPaper.cpp"
	"src/2015/d3_AtLeastOnePresent.cpp"
	"src/2015/d4_AdventCoins.cpp"
	"src/2015/d5_NiceString.cpp"
	"src/2015/d6_LightWar.cpp"
	"src/2015/d7_Circuit.cpp"
	"src/2015/d8_EscapedStrings.cpp"
	"src/2015/d9_SingleNight.cpp"
	"src/2015/d10_SeeAndSay.cpp"
	"src/2015/d11_NextPass.cpp"
	"src/2015/d12_JsAbacus.cpp"
	"src/2015/d13_KnightsOfDinner.cpp"
	"src/2015/d14_ReindeerRaces.cpp"
	"src/2015/d15_PerfectCookie.cpp"
	"src/2015/d16_AuntSue.cpp"
	"src/2015/d17_EggnogStorage.cpp"
	"src/2015/d18_LightWar2.cpp"
	"src/2015/d19_RudolfReactor.cpp"
	"src/2015/d20_ElfDelivery.cpp"
	"src/2015/d21_BossBattle.cpp"
	"src/2015/d22_BossBattle2.cpp"
	"src/2015/d23_TuringLock.cpp"
	"src/2015/d24_SledBalance.cpp"
	"src/2015/d25_SecretCode.cpp"
	
	"src/2016/d1_GridSearch.cpp"
	"src/2016/d2_BathroomSecurity.cpp"
	"src/2016/d3_TriangleSquare.cpp"
	"src/2016/d4_DecoyRoom.cpp"
	"src/2016/d5_DoorPass.cpp"
	"src/2016/d6_RepeatSignal.cpp"
	"src/2016/d7_IpV7.cpp"
	"src/2016/d8_TFA.cpp"
	"src/2016/d9_Decompress.cpp"
	"src/2016/d10_BalanceBots.cpp"
	"src/2016/d11_Generators.cpp"
	"src/2016/d12_Assembunny.cpp"
	"src/2016/d13_CubeFarm.cpp"
	"src/2016/d14_OneTimePad.cpp"
	"src/2016/d15_WinCapsule.cpp"
	"src/2016/d16_DragonChecksum.cpp"
	"src/2016/d17_Vault.cpp"
	"src/2016/d18_Traps.cpp"
	"src/2016/d19_WhiteElephant.cpp"
	"src/2016/d20_Firewall.cpp"
	"src/2016/d21_Scrambler.cpp"
	"src/2016/d22_GridComputing.cpp"
	"src/2016/d23_SafeCrack.cpp"
	"src/2016/d24_AirDucts.cpp"
	"src/2016/d25_ClockSignal.cpp"

	"src/2017/KnotHash.cpp"
	"src/2017/d1_Captcha.cpp"
	"src/2017/d2_Checksum.cpp"
	"src/2017/d3_SpiralMemory.cpp"
	"src/2017/d4_Passphrase.cpp"
	"src/2017/d5_Trampoline.cpp"
	"src/2017/d6_Realloc.cpp"
	"src/2017/d7_Circus.cpp"
	"src/2017/d8_Registers.cpp"
	"src/2017/d9_Streams.cpp"
	"src/2017/d10_KnotHash.cpp"
	"src/2017/d11_HexGrid.cpp"
	"src/2017/d12_PipeMessage.cpp"
	"src/2017/d13_Firewall.cpp"
	"src/2017/d14_Defrag.cpp"
	"src/2017/d15_Generators.cpp"
	"src/2017/d16_Dance.cpp"
	"src/2017/d17_SpinLock.cpp"
	"src/2017/d18_Duet.cpp"
	"src/2017/d19_Routing.cpp"
	"src/2017/d20_ParticleSwarm.cpp"
	"src/2017/d21_FractalArt.cpp"
	"src/2017/d22_Infecting.cpp"
	"src/2017/d23_Coprocessor.cpp"
	"src/2017/d24_Bridge.cpp"
	"src/2017/d25_TuringMachine.cpp"

	"src/2018/d1_Calibrate.cpp"
	"src/2018/d2_BoxId.cpp"
	"src/2018/d3_Fabric.cpp"
	"src/2018/d4_Record.cpp"
	"src/2018/d5_Reduction.cpp"
	"src/2018/d6_Coordinates.cpp"
	"src/2018/d7_Sleigh.cpp"
	"src/2018/d8_MemoryTree.cpp"
	"src/2018/d9_Marbles.cpp"
	"src/2018/d10_StarMessage.cpp"
	"src/2018/d11_PowerCell.cpp"
	"src/2018/d12_Plants.cpp"
	"src/2018/d13_MineCart.cpp"
	"src/2018/d14_HotChocolate.cpp"
	"src/2018/d15_ElfCombat.cpp"
	"src/2018/d16_Chronal.cpp"
	"src/2018/d17_Waterfall.cpp"
	"src/2018/d18_Lumber.cpp"
	"src/2018/d19_Comp2.cpp"
	"src/2018/d20_Pathing.cpp"
	"src/2018/d21_Comp3.cpp"
	"src/2018/d22_Cave.cpp"
	"src/2018/d23_Teleport.cpp"
	"src/2018/d24_Armies.cpp"
	"src/2018/d25_TimePortal.cpp"

	"src/2019/d1_Fuel.cpp"
	"src/2019/d2_Comp1.cpp"
	"src/2019/d3_Wires.cpp"
	"src/2019/d4_VenusPass.cpp"
	"src/2019/d5_Comp2.cpp"
	"src/2019/d6_Orbits.cpp"
	"src/2019/d7_Comp3.cpp"
	"src/2019/d8_ImageFormat.cpp"
	"src/2019/d9_Comp4.cpp"
	"src/2019/d10_Asteroid.cpp"
	"src/2019/d11_Comp5.cpp"
	"src/2019/d12_Moons.cpp"
	"src/2019/d13_Comp6.cpp"
	"src/2019/d14_Fuel.cpp"
	"src/2019/d15_Comp7.cpp"
	"src/2019/d16_Fft.cpp"
	"src/2019/d17_Ascii.cpp"
	"src/2019/d18_CaveDoors.cpp"
	"src/2019/d19_Comp8.cpp"
	"src/2019/d20_PlutoMaze.cpp"
	"src/2019/d21_Comp9.cpp"
	"src/2019/d22_SpaceCards.cpp"
	"src/2019/d23_Comp10.cpp"
	"src/2019/d24_Bugs.cpp"
	"src/2019/d25_Comp11.cpp"

	"src/2020/d1_Expense.cpp"
	"src/2020/d2_PassCheck.cpp"
	"src/2020/d3_TreePath.cpp"
	"src/2020/d4_Passport.cpp"
	"src/2020/d5_Seat.cpp"
	"src/2020/d6_Customs.cpp"
	"src/2020/d7_Luggage.cpp"
	"src/2020/d8_Halting.cpp"
	"src/2020/d9_Xmas.cpp"
	"src/2020/d10_Jolts.cpp"
	"src/2020/d11_WaitingSeats.cpp"
	"src/2020/d12_RainRisk.cpp"
	"src/2020/d13_BusStop.cpp"
	"src/2020/d14_Docking.cpp"
	"src/2020/d15_NumberGame.cpp"
	"src/2020/d16_Tickets.cpp"
	"src/2020/d17_Reactor.cpp"
	"src/2020/d18_NewMath.cpp"
	"src/2020/d19_SeaMonster.cpp"
	"src/2020/d20_TileMap.cpp"
	"src/2020/d21_Allergens.cpp"
	"src/2020/d22_CrabCombat.cpp"
	"src/2020/d23_CrabCups.cpp"
	"src/2020/d24_Lobby.cpp"
	"src/2020/d25_RoomCard.cpp"

	"src/2021/d1_Sonar.cpp"
	"src/2021/d2_Dive.cpp"
	"src/2021/d3_Binary.cpp"
	"src/2021/d4_Bingo.cpp"
	"src/2021/d5_Vents.cpp"
	"src/2021/d6_Fish.cpp"
	"src/2021/d7_Whales.cpp"
	"src/2021/d8_DigitDisplay.cpp"
	"src/2021/d9_LavaTube.cpp"
	"src/2021/d10_Syntax.cpp"
	"src/2021/d11_OctoFlash.cpp"
	"src/2021/d12_CavePath.cpp"
	"src/2021/d13_FoldingPaper.cpp"
	"src/2021/d14_Polymer.cpp"
	"src/2021/d15_Chiton.cpp"
	"src/2021/d16_Bits.cpp"
	"src/2021/d17_ProbeShot.cpp"
	"src/2021/d18_SnailMath.cpp"
	"src/2021/d19_Beacons.cpp"
	"src/2021/d20_Image.cpp"
	"src/2021/d21_Dice.cpp"
	"src/2021/d22_Reactor.cpp"
	"src/2021/d23_Hanoi.cpp"
	"src/2021/d24_Monad.cpp"
	"src/2021/d25_Landing.cpp"

	"src/2022/d1_ElfSnacks.cpp"
	"src/2022/d2_RPS.cpp"
	"src/2022/d3_Rucksack.cpp"
	"src/2022/d4_ElfCleaning.cpp"
	"src/2022/d5_SupplyStacks.cpp"
	"src/2022/d6_TuningTrouble.cpp"
	"src/2022/d7_Os.cpp"
	"src/2022/d8_TreeTop.cpp"
	"src/2022/d9_Rope.cpp"
	"src/2022/d10_Crt.cpp"
	"src/2022/d11_MonkeyBusiness.cpp"
	"src/2022/d12_HillClimb.cpp"
	"src/2022/d13_DistressSignal.cpp"
	"src/2022/d14_FallingSand.cpp"
	"src/2022/d15_Beacon.cpp"
	"src/2022/d16_Pressure.cpp"
	"src/2022/d17_Tetris.cpp"
	"src/2022/d18_LavaBlock.cpp"
	"src/2022/d19_GatherOre.cpp"
	"src/2022/d20_Mixing.cpp"
	"src/2022/d21_MonkeyMath.cpp"
	"src/2022/d22_MonkeyMap.cpp"
	"src/2022/d23_Planting.cpp"
	"src/2022/d24_Blizzard.cpp"
	"src/2022/d25_Snafu.cpp"

	"src/2023/d1_trebuchet.cpp"
	"src/2023/d2_CubeGame.cpp"
	"src/2023/d3_Gears.cpp"
	"src/2023/d4_Scratch.cpp"
	"src/2023/d5_SeedMap.cpp"
	"src/2023/d6_BoatRace.cpp"
	"src/2023/d7_CamelCards.cpp"
	"src/2023/d8_Maps.cpp"
	"src/2023/d9_Oasis.cpp"
	"src/2023/d10_PipeMaze.cpp"
	"src/2023/d11_CosmicExpansion.cpp"
	"src/2023/d12_HotSprings.cpp"
	"src/2023/d13_Mirrors.cpp"
	"src/2023/d14_Tilting.cpp"
	"src/2023/d15_HashLens.cpp"
	"src/2023/d16_LightPath.cpp"
	"src/2023/d17_LavaPath.cpp"
	"src/2023/d18_LavaLagoon.cpp"
	"src/2023/d19_GearSort.cpp"
	"src/2023/d20_PulseMachine.cpp"
	"src/2023/d21_GardenSteps.cpp"
	"src/2023/d22_FallingSand.cpp"
	"src/2023/d23_ScenicWalk.cpp"
	"src/2023/d24_Hail.cpp"
	"src/2023/d25_CutWires.cpp"

	"src/2024/d1_HistorianHisteria.cpp"
	"src/2024/d2_RedNoseReports.cpp"
	"src/2024/d3_MullItOver.cpp"
	"src/2024/d4_CeresSearch.cpp"
	"src/2024/d5_PrintQueue.cpp"
	"src/2024/d6_GuardGallivant.cpp"
	"src/2024/d7_BridgeRepair.cpp"
	"src/2024/d8_ResonantCollinearity.cpp"
	"src/2024/d9_DiskFragmenter.cpp"
	"src/2024/d10_HoofIt.cpp"
	"src/2024/d11_PlutonianPebbles.cpp"
	"src/2024/d12_GardenGroups.cpp"
	"src/2024/d13_ClawContraption.cpp"
	"src/2024/d14_RestroomRedoubt.cpp"
	"src/2024/d15_WarehouseWoes.cpp"
	"src/2024/d16_ReindeerMaze.cpp"
	"src/2024/d17_ChronospatialComputer.cpp"
	"src/2024/d18_RamRun.cpp"
	"src/2024/d19_LinenLayout.cpp"
	"src/2024/d20_RaceCondition.cpp"
	"src/2024/d21_KeypadConundrum.cpp"
	"src/2024/d22_MonkeyMarket.cpp"
	"src/2024/d23_LanParty.cpp"
	"src/2024/d24_CrossedWires.cpp"
	"src/2024/d25_CodeChronicle.cpp"

	"src/2025/d1_SecretEntrance.cpp"
	"src/2025/d2_.cpp"
	"src/2025/d3_.cpp"
	"src/2025/d4_.cpp"
	"src/2025/d5_.cpp"
	"src/2025/d6_.cpp"
	"src/2025/d7_.cpp"
	"src/2025/d8_.cpp"
	"src/2025/d9_.cpp"
	"src/2025/d10_.cpp"
	"src/2025/d11_.cpp"
	"src/2025/d12_.cpp"

	"src/Kattis/Matryoshka.cpp" 
	"src/Kattis/2048.cpp" 
	"src/Kattis/4Thought.cpp" 
)